Added businessId property
